# ChangeLog for www-apps/danbooru
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*danbooru-9999 (14 Feb 2011)

  14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> danbooru-1.18.0.ebuild,
  +danbooru-9999.ebuild:
  danbooru_image_resizer.so is now installed in /usr/lib[64]. Also added live
  ebuild.
