@@ -1,4 +1,4 @@
 AUX postinstall-en.txt 29 RMD160 0ea179c06487042967b7ec3040a90c126780c415 SHA1 2ef86db107ee09bd8bc381f5fd7697c0ed6affc9 SHA256 c23ec8868ea88f4407193cf65b4593f36e4903a0450c7219ad85385aa1687c78
-EBUILD danbooru-1.18.0.ebuild 1615 RMD160 85026f0106ad82a49def31c9d6efc2a41d3069f5 SHA1 4c3c5bc4df9ba7eab3bc7efa73967b9541d4e00b SHA256 ca1ad462c01ee34ad3513433b1792bae634a0c52f2a7b2a2550889ecf1b11acc
-EBUILD danbooru-9999.ebuild 1615 RMD160 85026f0106ad82a49def31c9d6efc2a41d3069f5 SHA1 4c3c5bc4df9ba7eab3bc7efa73967b9541d4e00b SHA256 ca1ad462c01ee34ad3513433b1792bae634a0c52f2a7b2a2550889ecf1b11acc
+EBUILD danbooru-1.18.0.ebuild 1962 RMD160 216a37bd83b3a6d92eb1794507b482fd077b334f SHA1 4d0d7855a0cf91b193b596250dcdf937a6defbc4 SHA256 414f7231c273c1e0c9c449b14267a681bd53c974a4a954bbb7fc51c38b47023c
+EBUILD danbooru-9999.ebuild 1962 RMD160 216a37bd83b3a6d92eb1794507b482fd077b334f SHA1 4d0d7855a0cf91b193b596250dcdf937a6defbc4 SHA256 414f7231c273c1e0c9c449b14267a681bd53c974a4a954bbb7fc51c38b47023c
 MISC ChangeLog 337 RMD160 52dc75be13e8ec760546c1c29717a7e348f58936 SHA1 1dfc2bfb9cc760686d245eba58c0f709d2d08f9b SHA256 6270ab7385e088df6703435b2d339a9b0ea77696de7ef09e727ec0f4671bff09
