@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> danbooru-1.18.0.ebuild:
+  Example configs now get installed in ${PF}.
+
 *danbooru-9999 (14 Feb 2011)
 
   14 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> danbooru-1.18.0.ebuild,
